# wgpu-ray-tracing

./: Cargo.toml  README.md  index.html
assets/: manifest.json  service_worker.js
src/: app.rs  gpu.rs  main.rs  raytracing.rs  raytracing.wgsl  render.wgsl  shader.wgsl
src/gpu/: compute_stage.rs  mod.rs  render_stage.rs  renderer.rs  shared_stage_data.rs
src/ray_tracer/: camera.rs  mod.rs  vectors.rs
src/shaders/: camera.hlsl  main.hlsl  raytracing.wgsl  render.wgsl
