[package]
name = "rt_shader"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.22.0"
eframe = { version = "0.23.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "wgpu",          # Use the wgpu rendering backend. Alternative: "glow".
    "persistence",   # Enable restoring app state when restarting the app.
] }
bytemuck = { version = "1.14.0", features = ["derive"]}
serde = { version = "1.0.188", features = ["derive"] }
log = "0.4"
cfg-if = "1.0.0"

# for the examples
[dev-dependencies]
wgsl_preprocessor = "1.1.3"
pollster = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


